[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/HealthBar_Theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/SkillCardBase.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.52549, 0.0352941, 0.0352941, 0.647059 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_detail = 20

[sub_resource type="Theme" id=4]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=3]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[node name="Skiil" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 13.0
margin_right = -791.0
margin_bottom = -415.0
rect_scale = Vector2( 0.6, 0.6 )
script = ExtResource( 3 )

[node name="HeroBar2" type="ProgressBar" parent="."]
light_mask = 3
margin_left = 96.6667
margin_top = 162.333
margin_right = 305.667
margin_bottom = 387.333
rect_rotation = -89.9999
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 1 )
custom_styles/bg = SubResource( 1 )
max_value = 5.0
percent_visible = false

[node name="Control" type="Control" parent="HeroBar2"]
margin_left = 211.25
margin_top = -0.000366211
margin_right = 261.25
margin_bottom = 39.9996
rect_scale = Vector2( 1.4, 1.2 )

[node name="Name" type="Label" parent="HeroBar2/Control"]
margin_left = -0.249969
margin_top = 2.00037
margin_right = 277.75
margin_bottom = 59.0004
rect_rotation = 89.9999
rect_scale = Vector2( 0.8, 0.8 )
theme = SubResource( 4 )
text = "Knight"
autowrap = true
clip_text = true

[node name="BackGround" type="ColorRect" parent="HeroBar2/Control/Name"]
modulate = Color( 0.129412, 0.0117647, 0.0117647, 0.921569 )
show_behind_parent = true
margin_left = -3.0
margin_right = 231.0
margin_bottom = 35.0
theme = SubResource( 3 )
color = Color( 0.113725, 0.0392157, 0.980392, 0.694118 )

[node name="timerValue" type="Label" parent="HeroBar2"]
margin_left = 36.25
margin_top = -20.0001
margin_right = 360.25
margin_bottom = 12.0
rect_rotation = 89.9999
rect_scale = Vector2( 0.8, 0.8 )
theme = SubResource( 2 )
text = "100/100"
align = 1

[node name="Details" type="Label" parent="."]
margin_left = 100.667
margin_top = 30.3333
margin_right = 311.667
margin_bottom = 182.333
rect_scale = Vector2( 0.8, 0.8 )
theme = SubResource( 2 )
text = "10 damage"
autowrap = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button1" type="Button" parent="."]
modulate = Color( 0.882353, 0.396078, 0.396078, 0.145098 )
self_modulate = Color( 0.760784, 0.588235, 0.588235, 1 )
margin_left = 96.6667
margin_top = -6.66667
margin_right = 277.667
margin_bottom = 160.333

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Button1" to="." method="_on_Button1_button_down"]
